tests/test_proof/bad/output/no_vars-conflict.catala_en.Proof
[RESULT] For this variable:
 --> tests/test_proof/bad/no_vars-conflict.catala_en
  | 
8 |   context y content integer
  |           ^
  + Test

[ERROR] Two exceptions overlap for this variable

[RESULT] For this variable:
 --> tests/test_proof/bad/no_vars-conflict.catala_en
  | 
8 |   context y content integer
  |           ^
  + Test

[RESULT] The variable definition never returns an empty error

[RESULT] For this variable:
 --> tests/test_proof/bad/no_vars-conflict.catala_en
  | 
7 |   context x content integer
  |           ^
  + Test

[RESULT] No two exceptions to ever overlap for this variable

[RESULT] For this variable:
 --> tests/test_proof/bad/no_vars-conflict.catala_en
  | 
7 |   context x content integer
  |           ^
  + Test

[RESULT] The variable definition never returns an empty error

